Bugfix, improved scrollbar style

--- a/src/assets/css/scrollbars.css
+++ b/src/assets/css/scrollbars.css
@@ -1,28 +1,28 @@
 .scroll-bar:horizontal .track,
 .scroll-bar:vertical .track{
-	-fx-padding: 2.0em;
+	-fx-padding: 1.0em;
     -fx-background-color: #c49c6d;
     -fx-border-color: transparent;
     -fx-background-radius: 0.0em;
-    -fx-border-radius: 2.0em;
+    -fx-border-radius: 1.0em;
 }
 
 
 .scroll-bar:horizontal .track-background,
 .scroll-bar:vertical .track-background {
-	-fx-padding: 2.0em;
+	-fx-padding: 1.0em;
     -fx-background-color: transparent;
     -fx-border-color: transparent;
-    -fx-background-radius: 2.0em;
-    -fx-border-radius: 2.0em;
+    -fx-background-radius: 1.0em;
+    -fx-border-radius: 1.0em;
 }
 
 
 .scroll-bar:horizontal .increment-button ,
 .scroll-bar:horizontal .decrement-button {
-    -fx-background-color : green;
+    -fx-background-color : transparent;
     -fx-background-radius : 0.0em;
-    -fx-padding : 0.0 0.0 10.0 0.0;
+    -fx-padding : 0.0 0.0 5.0 0.0;
 
 }
 
@@ -30,8 +30,17 @@
 .scroll-bar:vertical .decrement-button {
     -fx-background-color: transparent;
     -fx-background-radius : 0.0em;
-    -fx-padding :0.0 10.0 0.0 0.0;
+    -fx-padding :0.0 0.0 0.0 0.0;
+}
 
+.scroll-bar:vertical {
+	-fx-pref-width: 15px;
+	-fx-padding: 0px;
+}
+
+.scroll-bar:horizontal {
+	-fx-pref-height: 15px;
+	-fx-padding: 0px;
 }
 
  .scroll-bar .increment-arrow,
@@ -47,14 +56,13 @@
 
 .scroll-bar:horizontal .thumb,
 .scroll-bar:vertical .thumb {
-    -fx-background-color :derive(#503210,50.0%);
+    -fx-background-color :derive(#503210,40.0%);
     -fx-background-insets : 0.0, 0.0, 0.0;
-    -fx-background-radius : 2.0em;
+    -fx-background-radius : 1.0em;
 }
 
 .scroll-bar:horizontal .thumb:hover,
 .scroll-bar:vertical .thumb:hover {
-    -fx-background-color :derive(#4D4C4F,10.0%);
-    -fx-background-insets : 2.0, 0.0, 0.0;
-    -fx-background-radius : 2.0em;
+    -fx-background-color :derive(#503210,30.0%);
+    -fx-background-radius : 1.0em;
 }
